src/styles/site.css
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}


/* Scaffolding */

body {
    color: #444444;
    font-weight: 300;
    font: 16px Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
    margin: 0;
    padding: 50px;
}

.wrapper {
    margin: 0 auto;
    width: 1020px;
}

.wrapper:before,
.wrapper:after {
    content: " ";
    display: table;
}

.wrapper:after {
    clear: both;
}


/* Typography */

h1, h2, h3, h4, h5, h6 {
    color: #444444;
    margin: 0 0 20px;
}

h1, h2, h3, h4, h5, h6 {
    line-height: 1;
}

h1 { font-size: 30px; }
h2 { font-size: 26px; }
h3 { font-size: 20px; }
h4 { font-size: 18px; }

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    color: #4f738d;
}

h1 a:hover {
    text-decoration: none;
}

a {
    color: #4f738d;
    text-decoration: none;
}

a:hover,
a:active {
    color: #2f538d;
    text-decoration: underline;
}

p, ul, ol, table, pre, dl {
    margin: 0 0 20px;
}

strong {
    color: #444444;
    font-weight: 700;
}

section {
    float: right;
    min-height: 400px;
    overflow: hidden;
    padding-bottom: 50px;
    width: 760px;
}

hr {
    background: #dddddd;
    border: 0;
    height: 1px;
    margin: 0 0 20px;
}

blockquote {
    border-left: 1px solid #dddddd;
    margin: 0;
    padding: 0 0 0 20px;
    font-style: italic;
}

code, pre {
    background: #f8f8f8;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: 1px solid #dddddd;
    color: #444444;
    font-family: Menlo, Consolas, "Courier New", Courier, "Liberation Mono", monospace;
    font-size: 13px;
    padding: 2px 4px;
}

pre {
    overflow-x: auto;
    padding: 8px 15px;
}

pre > code {
    background: transparent;
    border: none;
    padding: 0;
}

table {
    border-collapse: collapse;
    width: 100%;
}

th, td {
    border-bottom: 1px solid #dddddd;
    padding: 5px 10px;
    text-align: left;
}

dt {
    color: #444444;
    font-weight: 700;
}

th {
    color: #444444;
}


/* Header */

header {
    border-right: 1px solid #dddddd;
    float: left;
    margin-top: -50px;
    min-height: 100%;
    padding-right: 30px;
    position: fixed;
    width: 200px;
}

header h1 {
    margin: 50px 0 12px;
}


/* Navbar */

nav ul {
    background: #ffffff;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: 1px solid #dddddd;
    font-size: 13px;
    list-style: none;
    padding: 0;
}

nav li {
    border-bottom: 1px solid #dddddd;
    height: 24px;
    line-height: 24px;
}

nav li:last-child {
    border-bottom: none;
}

nav li a {
    color: #444444;
    display: block;
    padding-left: 15px;
}

nav li a:hover,
nav li a:active {
    color: #444444;
    font-weight: bold;
    text-decoration: none;
}

nav li a:active,
nav li a.active,
nav li a.active:hover {
    background: #e5e5e5;
}


/* Footer / Sidebar */

footer {
    bottom: 50px;
    float: left;
    font-size: 14px;
    position: fixed;
    text-align: center;
    width: 200px;
}

footer small {
    display: block;
    font-size: 12px;
    margin: 10px 0;
}

footer .extlinks {
    font-size: x-large;
}


/* Responsive Adjustments */

@media print, screen and (max-width: 1120px), screen and (max-height: 380px) {
    div.wrapper {
        margin: 0;
        width: auto;
    }

    header, section, footer {
        float: none;
        position: static;
        width: 100%;
    }

    header {
        border-right: 0;
        padding-right: 320px;
    }

    nav ul {
        border-bottom: none;
        height: 24px;
        position: absolute;
        right: 50px;
        top: 67px;
        width: 460px;
        border-radius: 5px 5px 0 0;
        -moz-border-radius: 5px 5px 0 0;
        -webkit-border-radius: 5px 5px 0 0;
    }

    nav li {
        border-bottom: none;
        border-right: 1px solid #dddddd;
        float: left;
        width: 91px;
    }

    nav li:last-child {
        border-right: none;
        width: 92px;
    }

    nav li a {
        padding-left: 5px;
    }

    section {
        border-bottom: 1px solid #dddddd;
        border-top: 1px solid #dddddd;
        margin: 0 0 20px;
        padding: 20px 0;
    }

    footer {
        margin: 0 auto;
        max-width: 400px;
        text-align: center;
    }
}

@media print, screen and (max-width: 720px) {
    body {
        word-wrap: break-word;
    }

    header {
        padding: 0;
    }

    nav ul {
        margin-bottom: -1px;
        position: static;
    }

    nav li {
        text-align: center;
    }

    nav li a {
        padding-left: 0px;
    }

    pre, pre > code {
        word-wrap: normal;
    }
}

@media print, screen and (max-width: 480px) {
    body {
        padding: 15px;
    }

    nav ul {
        width: 360px;
    }

    nav li {
        width: 71px;
    }

    nav li:last-child {
        width: 72px;
    }

    nav i {
        display: none;
    }
}

@media print {
    body {
        color: #444444;
        font-size: 12pt;
        padding: 0.4in;
    }

    nav ul {
        display: none;
    }
}

